--- a/GameMarioBros3/GameMarioBros3/GameMarioBros3.vcxproj
+++ b/GameMarioBros3/GameMarioBros3/GameMarioBros3.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
