--- a/GameMarioBros3/GameMarioBros3/GameMarioBros3.vcxproj
+++ b/GameMarioBros3/GameMarioBros3/GameMarioBros3.vcxproj
@@ -111,7 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CMain.cpp" />
+    <ClCompile Include="CZMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
